@@ -1,4 +1,4 @@
-/* Copyright (C) 1996, 1997, 1998, 2000 Free Software Foundation, Inc.
+/* Copyright (C) 1996, 1997, 1998, 2000, 2003 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@gnu.ai.mit.edu>, 1996.
 
@@ -19,6 +19,9 @@
 
 #include <string.h>
 #include <wchar.h>
+
+#undef mbsinit
+#undef __mbsinit
 
 /* In GNU libc the conversion functions only can convert between the
    fixed wide character representation and the multibyte
